# tbj-octo-engine

./: .gitignore  Cargo.toml  package.json  really-small-binary.zsh
src/: env.rs  main.rs  status_loop.rs
src/gql/: _period_teacher.rs  _report_to.rs  _teachers.rs  mod.rs
src/gql/definitions/: period_teacher.graphql  report_to.graphql  schema.graphql  schema.json  teachers.graphql
src/notifications/: client_manager.rs  mod.rs  payload.rs  utils.rs
