[package]
name = "octo-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"

tokio = { version = "1.21.2", features = ["macros", "rt", "full"] }

graphql_client = "0.13.0"

fcm = { version = "0.9.2", features=["rustls"], default-features = false }
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.188"
uuid = { version = "1.4.1", features = ["serde"] }
chrono = "0.4.30"
actix-web = { version = "4.4.0", features = ["rustls"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-final]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
