[package]
name = "octo-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"

tokio = { version = "1", features = ["macros", "rt", "full"] }

graphql_client = "0.13"

fcm = { version = "0.9", features=["rustls"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
actix-web = { version = "4", features = ["rustls"] }
lazy_static = "1"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-final]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1

[profile.release-minimum]
inherits = "release-final"
opt-level = "z"
strip = true
