[package]
name = "octo-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"

tokio = { version = "1", features = ["macros", "rt", "full"] }

graphql_client = "0.13"

fcm_v1 = { version = "0.3.0", git = "https://github.com/YourBCABus/fcm_v1_rustls.git" }

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
actix-web = { version = "4", features = ["rustls"] }
lazy_static = "1"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-final]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1

[profile.release-minimum]
inherits = "release-final"
opt-level = "z"
strip = true
